--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,19 @@ jobs:
           java-version: 1.8
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Lint XtendM3 Extensions
+        run: mvn -B xtendm3:lint --file pom.xml
+      - name: Export XtendM3 Extensions
+        run: mvn -B xtendm3:export --file pom.xml
+      - name: Export XtendM3 Extensions
+        run: mvn -B xtendm3:export --file pom.xml
+      - name: Upload exported extensions
+        if: ${{ success() }}
+        with:
+          - name: exported-extension
+            path: target/exported-*.zip
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
