Update build script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         if: ${{ success() }}
         with:
           name: exported-extension
-          path: target/exported-*.zip
+          path: target/exported.zip
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
