Update pom file

--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,23 @@
       <plugin>
         <groupId>com.infor.m3</groupId>
         <artifactId>xtendm3-maven-plugin</artifactId>
-        <version>0.1.1</version>
+        <version>0.1.2</version>
+        <executions>
+          <execution>
+            <id>lint</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>lint</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>export</id>
+            <phase>package</phase>
+            <goals>
+              <goal>export</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
